# flight-tracker-at-home

./: .cursorrules  .dockerignore  .gitignore  .mise.toml  .prettierignore  AGENTS.md  CLAUDE.md  MVP.md  README.md  RULES.md  biome.json  compose.yaml  docker-compose.prod.yml  docker-compose.yml  nx.json  orval.config.ts  package.json  render.yaml  ruff.toml  rulesync.jsonc  tsconfig.base.json
.codex/: config.toml
.cursor/rules/: CLAUDE.mdc
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  docker.yml
.rulesync/rules/: CLAUDE.md
apps/backend/: .env.example  Dockerfile  project.json  pyproject.toml
apps/backend/scripts/: export_openapi.py
apps/backend/src/: airplanes_live.py  cache.py  fixtures.py  main.py  mock_data.py  models.py  opensky.py  spatial_snapshot.py  weather.py
apps/backend/tests/: conftest.py  test_airplanes_live.py  test_api.py  test_cache.py  test_heatmap.py  test_integration.py  test_opensky.py  test_spatial_snapshot.py  test_weather.py
apps/e2e/: playwright.config.ts
apps/e2e/profiling/: memory.spec.ts  (+1 more)
apps/frontend/: .env  Caddyfile  Dockerfile  components.json  openapi.json  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.mts
apps/proxy/: .dev.vars.example  wrangler.jsonc
apps/worker/: .dev.vars.example  pyproject.toml  wrangler.jsonc
docs/: ARCHITECTURE.md  MVP.md  PRODUCT-FEATURES.md  SELF-HOST.md
docs/plans/: 2026-04-04-ci-memory-profiling.md  airplaneslive-field-mapping.md
scripts/: check-mise-docs-sync.sh  memory-profile.sh  sync-rules.sh
(+47 files in other folders)
