[project]
name = "flight-tracker-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.28",
]

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
all = "error"
unused-ignore-comment = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python = ".venv"
