[project]
name = "flight-tracker-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "fastapi>=0.115.0",
    "h3>=4.4.2",
    "httpx>=0.27.0",
    "pandas>=3.0.2",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.28",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
all = "error"
unused-ignore-comment = "warn"
